--- a/icons/sprite.html
+++ b/icons/sprite.html
@@ -1,4 +1,4 @@
 ---
 layout: iframe
-iframe: {{ "/icons/sprite/demo.html" | relative_url }}
+iframe: "{{ site.baseurl }}/icons/sprite/demo.html"
 ---
