--- a/icons/iconfont.html
+++ b/icons/iconfont.html
@@ -1,4 +1,4 @@
 ---
 layout: iframe
-iframe: {{ "/icons/iconfont/demo.html" | relative_url }}
+iframe: "{{ site.baseurl }}/icons/iconfont/demo.html"
 ---
