brands fonticon update

--- a/icons/brands_icons/demo-external-svg.html
+++ b/icons/brands_icons/demo-external-svg.html
@@ -17,7 +17,12 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="brands b-pegasus"><use xlink:href="symbol-defs.svg#b-pegasus"></use></svg><span class="name"> b-pegasus</span>
+                <svg class="brands b-pivotaltracker"><use xlink:href="symbol-defs.svg#b-pivotaltracker"></use></svg><span class="name"> b-pivotaltracker</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="brands b-statuscake"><use xlink:href="symbol-defs.svg#b-statuscake"></use></svg><span class="name"> b-statuscake</span>
             </div>
         </div>
         <div class="glyph fs1">
