--- a/icons/brands_icons/sprite/sprite.html
+++ b/icons/brands_icons/sprite/sprite.html
@@ -67,8 +67,12 @@
     <div class="clearfix mhl">
         <h1>Grid Size: 0</h1>
         <div class="cell fs1">
-            <span class="brands b-pegasus"></span>
-            b-pegasus
+            <span class="brands b-pivotaltracker"></span>
+            b-pivotaltracker
+        </div>
+        <div class="cell fs1">
+            <span class="brands b-statuscake"></span>
+            b-statuscake
         </div>
         <div class="cell fs1">
             <span class="brands b-splunk"></span>
