more apps and fonts

--- a/icons/victricons/sprite/sprite.html
+++ b/icons/victricons/sprite/sprite.html
@@ -67,12 +67,28 @@
     <div class="clearfix mhl">
         <h1>Grid Size: 0</h1>
         <div class="cell fs1">
-            <span class="v v-vumc"></span>
+            <span class="victr v-vumc"></span>
             v-vumc
         </div>
         <div class="cell fs1">
-            <span class="v v-redcap"></span>
+            <span class="victr v-redcap"></span>
             v-redcap
+        </div>
+        <div class="cell fs1">
+            <span class="victr v-pegasus"></span>
+            v-pegasus
+        </div>
+        <div class="cell fs1">
+            <span class="victr v-esmart"></span>
+            v-esmart
+        </div>
+        <div class="cell fs1">
+            <span class="victr v-researchmatch"></span>
+            v-researchmatch
+        </div>
+        <div class="cell fs1">
+            <span class="victr v-starbrite"></span>
+            v-starbrite
         </div>
   </div>
 
